--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -8,6 +8,10 @@ spec:
       app: goapp
   template:
     metadata:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /metrics
+        prometheus.io/port: "80"
       labels:
         app: goapp
     spec:
